--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "private": true,
   "dependencies": {
     "antd": "^4.0.3",
+    "axios": "^0.21.0",
+    "formik": "^2.2.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
